# px4-mission-harness-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  plan.md  testing-review.md  testing.md
.github/workflows/: ci.yml
crates/px4-harness/: Cargo.toml
crates/px4-harness-core/: Cargo.toml
crates/px4-harness-core/src/: error.rs  event.rs  generate.rs  lib.rs  scenario.rs  suite.rs
crates/px4-harness-core/src/assertion/: engine.rs  mod.rs
crates/px4-harness-core/src/fault/: mod.rs  pipeline.rs
crates/px4-harness-core/src/mavlink/: connection.rs  mod.rs
crates/px4-harness-core/src/mission/: controller.rs  mod.rs
crates/px4-harness-core/src/proxy/: mod.rs  udp_proxy.rs
crates/px4-harness-core/src/report/: json.rs  junit.rs  markdown.rs  mod.rs  model.rs
crates/px4-harness-core/src/telemetry/: mod.rs  processor.rs  store.rs
crates/px4-harness-core/tests/: sitl_integration.rs
crates/px4-harness/src/: main.rs
scenarios/: heavy_loss.toml  high_delay.toml  no_faults.toml  simple_mission.toml  suite.toml
