[package]
name = "px4-harness-core"
version = "0.1.0"
edition = "2021" # Rust edition — controls language features available

[dependencies] #Each dependency is a crate that this crate relies on
tokio = {version = "1", features = ["full"]} # Async runtime for Rust
serde = {version = "1", features = ["derive"]} # Serialization/deserialization library
toml = "0.5" # Library for parsing TOML files
thiserror = "2" # Library for defining error types
mavlink = { version = "0.14", features = ["ardupilotmega", "udp"] }
rand = "0.9"    # Random number generation for fault injection (drop probability, jitter)
serde_json = "1" # JSON serialization for report output

[features] # Optional features that can be enabled when building the crate
default = [] # No features enabled by default