[package]
name = "px4-harness-core"
version = "0.1.0"
edition = "2021"
description = "Core library for deterministic resilience testing of PX4 drone missions under degraded communication"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ZiadAhmed9/px4-mission-harness-rs"
keywords = ["px4", "drone", "mavlink", "testing", "fault-injection"]
categories = ["development-tools::testing", "aerospace::protocols"]

[dependencies] #Each dependency is a crate that this crate relies on
tokio = {version = "1", features = ["full"]} # Async runtime for Rust
serde = {version = "1", features = ["derive"]} # Serialization/deserialization library
toml = "0.5" # Library for parsing TOML files
thiserror = "2" # Library for defining error types
mavlink = { version = "0.14", features = ["ardupilotmega", "udp"] }
rand = "0.9"    # Random number generation for fault injection (drop probability, jitter)
serde_json = "1" # JSON serialization for report output

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
default = []
sitl = [] # Enable integration tests that require a running PX4 SITL