[package]
name = "px4-harness"
version = "0.1.0"
edition = "2021"
description = "CLI tool for deterministic resilience testing of PX4 drone missions under degraded communication"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ZiadAhmed9/px4-mission-harness-rs"
keywords = ["px4", "drone", "mavlink", "testing", "fault-injection"]
categories = ["command-line-utilities", "aerospace::protocols"]

[dependencies]
px4-harness-core = { path = "../px4-harness-core"} # Dependency on the core library crate
anyhow = "1.0" # For error handling
clap = { version = "4.0", features = ["derive"] } # For command-line argument parsing
tokio = { version = "1.0", features = ["full"] } # For async runtime
mavlink = { version = "0.14", features = ["ardupilotmega", "udp"] } # For MavMessage type used in pattern matching